<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical" android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


 <RadioGroup
     android:id="@+id/radioGroup"
  android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/RPC"
                    android:textSize="12dp" android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/OTL"
                    android:textSize="12dp" />
        
</RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r1"
        android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/gen" />

    <TextView
        android:id="@+id/resp_1"
        android:layout_width="fill_parent"
        android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:textSize="30dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_scan" android:layout_marginTop="20dp" android:enabled="false" android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r2"
        android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="10dp" android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/resp_2"
        android:layout_width="fill_parent"
        android:layout_height="40dp" android:layout_marginRight="10dp" android:layout_marginLeft="10dp" android:textSize="30dp"/>

</LinearLayout>